--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../WD-Donna.github.io/html_anchor/assets/css/style.css">
 </head>
 <body>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="#home-section">Home</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Portfolio</a>
+            </li>
+            <li>
+                <a href="">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="home-section">
+            Section Home
+        </section>
+
+        <section id="about-section">
+            About Section
+        </section>
+
+        <section>
+            Portfolio Section
+        </section>
+
+        <section>
+            Contact Section
+        </section>
+    </main>
     Welcome to my First GitHub Page created in HTML5
 </body>
 </html>
