--- a/html_static_web/home.html
+++ b/html_static_web/home.html
@@ -91,7 +91,6 @@
                 </div>   
 
             <section id="about-section" class="section-p1">
-                <img src="../html_static_web/assets/logo.png" alt="logo">
                 <div>
                     <h1>ABOUT US</h1>
                     <p>
@@ -121,7 +120,6 @@
     
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="./assets/logo.png" width="110px" height="90px" alt="">
             <h4>Contact</h4>
             <p><strong>Address: </strong> Parañaque City</p>
             <p><strong>Phone:</strong> 0123456789 </p>
@@ -149,7 +147,7 @@
     </footer>
 
     <div class="copyright">
-        <p>© 2024, GOLDEN OWL</p>
+        <h4>© 2024, GOLDEN OWL</h4>
     </div>  
     
 </body>
