--- a/html_mp1/contact.html
+++ b/html_mp1/contact.html
@@ -3,41 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/6ba3af718e.js" crossorigin="anonymous"></script>
-
+    <title>Robert Green</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-
-    <link rel="stylesheet" href="./css/style.css">
-
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="./css/all.min.css">
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/assets/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
     <section id="header">
-        <a href="#"><img src="assets/Picture18-nobg.png" class="logo" width="140" height="70"></a>
-
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li id="lg-bag"><a href="cart.html">
-                    <i class="fa-shopping-cart"></i>
-                <a href="#" id="close"><i class="far fa-times"></i></a>
-            </ul>
-        </div>
-        <div id="mobile">
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
-            <i id="bar" class="fas fa-outdent"></i>
+        <a href="index.html"><img src="assets/Picture18-nobg.png" class="logo" width="140" height="70"></a>
+    
+        <div id="nav-container">
+            <div>
+                <ul id="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a class="active" href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <div id="mobile">
+                <a href="#" id="mobile-toggle"><i class="fas fa-bars"></i></a>
+                <div id="mobile-menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a class="active" href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -87,7 +85,7 @@
 
     <section id="newsletter" class="section-m1 section-p1">
         <div class="newstext">
-            <h4>Sign Up For Newsletters </h4>
+            <h4>Sign Up Now</h4>
             <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
         </div>
         <div class="form">
@@ -103,16 +101,6 @@
             <p><strong>Address: </strong> Parañaque City</p>
             <p><strong>Phone:</strong> (+63) 97 5503 2043</p>
             <p><strong>Hours:</strong> 8:00AM - 5:00PM, Mon - Fri</p>
-            <div class="follow">
-                <h4>Follow Us</h4>
-                <div class="icon">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-pinterest-p"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
-            </div>
         </div>
 
         <div class="col">
@@ -134,15 +122,17 @@
         </div>
 
         <div class="col install">
-            <h4>Install App</h4>
-            <p>From App Store or Google Play</p>
-            <div class="row">
-                <img src="assets/app.jpg" alt="">
-                <img src="assets/play.jpg" alt="">
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
             </div>
-            <p>Secured Payment Gateways </p>
-            <img src="assets/pay.png" alt="">
-        </div>
+        </div>   
 
         <div class="copyright">
             <p>© 2023, MP1 - RG STORE</p>
@@ -151,6 +141,11 @@
 
 
     <script src="script.js"></script>
+    <script>
+        document.getElementById('mobile-toggle').addEventListener('click', function() {
+        document.getElementById('mobile-menu').classList.toggle('active');
+    });
+    </script>
 </body>
 
 </html>
