--- a/html_mp1/index.html
+++ b/html_mp1/index.html
@@ -3,127 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/6ba3af718e.js" crossorigin="anonymous"></script>
-
+    <title>Robert Green</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-
-    <link rel="stylesheet" href="./assets/css/style.css">
-
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="/assets/css/all.min.css">
-
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
-        <section id="header">
-            <a href="#"><img src="assets/Picture18-nobg.png" class="logo" width="140" height="70"></a>
-
+    <section id="header">
+        <a href="index.html"><img src="assets/Picture18-nobg.png" class="logo" width="140" height="70"></a>
+    
+        <div id="nav-container">
             <div>
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li id="lg-bag"><a href="#">
-                        <i class="fa fa-shopping-bag"></i>
-                    </a></li> 
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div id="mobile">
-                <a href="#"><i class="far fa-shopping-bag"></i></a>
-                <i id="bar" class="fas fa-outdent"></i>
-            </div>
-        </section>
-
-        <section id="foldable">
-            <button>Shop Now</button>
-        </section>
-
-        <section id="sm-banner" class="section-p1">
-            <div class="banner-box">
-                <h4>Item on Promotion</h4>
-                <h2>up to 50% OFF</h2>
-                <span>The best coordinates with Bathroom Accesories</span>
-                <button class="white">Learn More</button>
-            </div>
-            <div class="banner-box banner-box2">
-                <h4>Spring/Summer</h4>
-                <h2>For upcomming season</h2>
-                <span>Summer Solid Color</span>
-                <button class="white">Collection</button>
-            </div>
-        </section>
-
-        <section id="banner3">
-            <div class="banner-box">
-                <h2>ON SALE</h2>
-                <h3>PRE-CHRISTMAS Collection -50% OFF</h3>
-            </div>
-            <div class="banner-box banner-box2">
-                <h2>BATHROOM RUGS</h2>
-                <h3>Coordinates with Shower Curtain</h3>
-            </div>
-            <div class="banner-box banner-box3">
-                <h2>SHOWER CURTAINS</h2>
-                <h3>New Trendy Prints</h3>
-            </div>
-        </section>
-
-        <footer class="section-p1">
-            <div class="col">
-                <img class="logo" src="./assets/Picture18-nobg.png" width="130px" height="90px" alt="">
-                <h4>Contact</h4>
-                <p><strong>Address: </strong> Parañaque City</p>
-                <p><strong>Phone:</strong> (+63) 97 5503 2043</p>
-                <p><strong>Hours:</strong> 8:00AM - 5:00PM, Mon - Fri</p>
-                <div class="follow">
-                    <h4>Follow Us</h4>
-                    <div class="icon">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-pinterest-p"></i>
-                        <i class="fab fa-youtube"></i>
-                    </div>
+                <a href="#" id="mobile-toggle"><i class="fas fa-bars"></i></a>
+                <div id="mobile-menu">
+                    <ul>
+                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="col">
-                <h4>About</h4>
-                <a href="#">About Us</a>
-                <a href="#">Delivery Information</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms & Conditions</a>
-                <a href="#">Contact Us</a>
+<section id="banner">
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="assets/banner1.jpg" alt="Slide 1"></div>
+        </div>
+        <div class="swiper-pagination"></div>
+    </div>
+</section>
+
+<section id="sm-banner" class="section-p1">
+    <div class="banner-box">
+        <h4>Item on Promotion</h4>
+        <h2>up to 50% OFF</h2>
+        <span>The best coordinates with Bathroom Accesories</span>
+        <button class="white">Learn More</button>
+    </div>
+    <div class="banner-box banner-box2">
+        <h4>Spring/Summer</h4>
+        <h2>For upcomming season</h2>
+        <span>Summer Solid Color</span>
+        <button class="white">Collection</button>
+    </div>
+</section>
+
+<section id="banner3">
+    <div class="banner-box">
+        <h2>ON SALE</h2>
+        <h3>PRE-CHRISTMAS Collection -50% OFF</h3>
+    </div>
+    <div class="banner-box banner-box2">
+        <h2>BATHROOM RUGS</h2>
+        <h3>Coordinates with Shower Curtain</h3>
+    </div>
+    <div class="banner-box banner-box3">
+        <h2>SHOWER CURTAINS</h2>
+        <h3>New Trendy Prints</h3>
+    </div>
+</section>
+
+<footer class="section-p1">
+    <div class="col">
+        <img class="logo" src="./assets/Picture18-nobg.png" width="130px" height="90px" alt="">
+        <h4>Contact</h4>
+        <p><strong>Address: </strong> Parañaque City</p>
+        <p><strong>Phone:</strong> (+63) 97 5503 2043</p>
+        <p><strong>Hours:</strong> 8:00AM - 5:00PM, Mon - Fri</p>
+    </div>
+
+    <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+    </div>
+
+    <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+    </div>
+
+    <div class="col install">
+        <div class="follow">
+            <h4>Follow Us</h4>
+            <div class="icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-youtube"></i>
             </div>
+        </div>
+    </div>   
 
-            <div class="col">
-                <h4>My Account</h4>
-                <a href="#">Sign In</a>
-                <a href="#">View Cart</a>
-                <a href="#">My Wishlist</a>
-                <a href="#">Track My Order</a>
-                <a href="#">Help</a>
-            </div>
+    <div class="copyright">
+        <p>© 2024, MP1 - RG STORE</p>
+    </div>
+</footer>
 
-            <div class="copyright">
-                <p>© 2024, MP1 - RG STORE</p>
-            </div>
-        </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        loop: true,
+        autoplay: {
+            delay: 5000,
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+    });
+</script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
-    <script src="./js/bootstrap.min.js"></script>
+<script>
+    document.getElementById('mobile-toggle').addEventListener('click', function() {
+    document.getElementById('mobile-menu').classList.toggle('active');
+});
+</script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./js/main.js"></script>
 
-    <script src="./js/main.js"></script>
 </body>
 </html>
