--- a/html_mp1/shop.html
+++ b/html_mp1/shop.html
@@ -41,7 +41,7 @@
     
     <section id="product1" class="section-p1">
         <div class="pro-container">
-            <div class="pro" onclick="window.location.href='#';">
+            <div class="pro" onclick="window.location.href='product.html';">
                 <img src="assets/SC0002.jpg" alt="" width="50%">
                 <div class="des">
                     <span>Robert Green</span>
