--- a/activity_array/index.html
+++ b/activity_array/index.html
@@ -10,43 +10,45 @@
 <body>
     <main class="container mt-4">
         <section class="row">
-            <div class="col-md-3 bg-primary text-white p-5">
+            <div class="col-md-3 bg-primary text-black p-3">
                 <h4>Employee Entry</h4>
-                <div class="mb-3 mt-3">
+                <div class="mb-3">
                     <label for="">Employee ID</label>
                     <input id="txtEmployeeID" type="text" class="form-control form-control-sm">
                 </div>
-                <div class="mb-3 mt-3">
+                <div class="mb-3">
                     <label for="">Employee Name</label>
                     <input id="txtEmployeeName" type="text" class="form-control form-control-sm">
                 </div>
-                <div class="mb-3 mt-3">
+                <div class="mb-3">
                     <label for="">Working Hours</label>
                     <input id="txtWorkingHours" type="number" class="form-control form-control-sm">
                 </div>
-                <div class="mb-3 mt-3">
+                <div class="mb-3">
                     <button class="btn btn-light" id="btn-add"> Log Hours </button>
                 </div>
             </div>
             <div class="col-md-3"></div>
-            <div class="col-md-6 bg-primary text-white p-5 overflow-auto" style="max-height: 300px;">
+            <div class="col-md-6 bg-primary text-black p-3">
                 <div class="row">
-                    <div class="col-sm">
-                    Emp Id
+                    <div class="col">
+                        <strong>Emp Id</strong>
                     </div>
-                    <div class="col-sm">
-                    Fullname
+                    <div class="col">
+                        <strong>Fullname</strong>
                     </div>
-                    <div class="col-sm">
-                    Hours
+                    <div class="col">
+                        <strong>Hours</strong>
                     </div>
-                    <div class="col-sm">
-                    Action
+                    <div class="col">
+                        <strong>Action</strong>
                     </div>
-                <ul id="ul-list"></ul>
+                    <ul id="ul-list"></ul>
+                </div>
+                <div class="bg-white text-black p-2">Total Working Hours: <span id="total-working-hours">0</span></div>
             </div>
+            
         </section>
-        <div>Total Working Hours: <span id="total-working-hours">0</span></div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
