--- a/activity_array/index.html
+++ b/activity_array/index.html
@@ -25,11 +25,12 @@
                     <input id="txtWorkingHours" type="number" class="form-control form-control-sm">
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-light" id="btn-add"> Log Hours </button>
+                    <button class="btn btn-light" id="btn-add">Log Hours</button>
                 </div>
+                <div class="bg-white text-black p-2">Total Working Hours: <span id="total-working-hours">0</span></div>
             </div>
             <div class="col-md-3"></div>
-            <div class="col-md-6 bg-primary text-black p-3">
+            <div class="col-md-6 bg-primary text-black p-5 overflow-auto" style="max-height: 300px;">
                 <div class="row">
                     <div class="col">
                         <strong>Emp Id</strong>
@@ -45,9 +46,7 @@
                     </div>
                     <ul id="ul-list"></ul>
                 </div>
-                <div class="bg-white text-black p-2">Total Working Hours: <span id="total-working-hours">0</span></div>
             </div>
-            
         </section>
     </main>
 
